[package]
name = "petri"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
indexmap = "2"
serde = "1"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
bytes = "1"
futures = "0.3"
tokio = { version = "1", features = [
    "rt",
    "macros",
    "io-util",
    "net",
    "time",
    "sync",
    "process",
] }
libc = "0.2"
