[package]
name = "petri"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
chrono = "0.4"
indexmap = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = { version = "0.4", features = ["std"] }
clap = { version = "4", features = ["derive"] }
home = "0.5"
async-trait = "0.1"
bytes = "1"
futures = "0.3"
tokio = { version = "1", features = [
    "rt",
    "macros",
    "io-util",
    "net",
    "time",
    "sync",
    "process",
] }
libc = "0.2"
