[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
authors = ["Cyandev"]
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
strip = true
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
clap = "4"
color-print = "0.3"
indexmap = "2"
log = "0.4"
pin-project-lite = "0.2"
parking_lot = "0.12"
serde = "1"
serde_json = "1"
tokio = "1"
thiserror = "1"
