[package]
name = "petri"
description = "A minimalist process manager"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
petri-control = { path = "../petri-control" }
petri-server = { path = "../petri-server" }
petri-logger = { path = "../petri-logger" }
petri-utils = { path = "../petri-utils" }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true, features = ["std"] }
clap = { workspace = true, features = ["derive"] }
once_cell = "1.18"
parking_lot = { workspace = true }
home = "0.5"
libc = "0.2"

[dependencies.tokio]
workspace = true
features = ["rt", "macros", "io-util", "net", "sync", "time"]
